--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -1,8 +1,8 @@
-disabled = false
+disabled = true
 languageCode = "en"
 languageName = "English"
 weight = 1
-title = "Blowfish"
+title = "Nonreachable"
 
 [params]
   displayName = "EN"
