--- a/config/_default/menus.ch.toml
+++ b/config/_default/menus.ch.toml
@@ -10,26 +10,38 @@
 # overridden by providing a weight value. The menu will then be
 # ordered by weight from lowest to highest.
 
-#[[main]]
-#  name = "Blog"
-#  pageRef = "posts"
-#  weight = 10
 
-#[[main]]
-#  name = "Parent"
-#  weight = 20
+[[main]]
+  identifier = "github"
+  pre = "github"
+  url = "https://github.com/irishcx/personal_blog"
+  weight = 50
 
-#[[main]]
-#  name = "example sub-menu 1"
-#  parent = "Parent"
-#  pageRef = "posts"
-#  weight = 20
+[[main]]
+  name = "About Me"
+  pageRef = "about"
+  weight = 10
+  
+[[main]]
+ name = "Blog"
+ pageRef = "posts"
+ weight = 10
 
-#[[main]]
-#  name = "example sub-menu 2"
-#  parent = "Parent"
-#  pageRef = "posts"
-#  weight = 20
+[[main]]
+ name = "Parent"
+ weight = 20
+
+[[main]]
+ name = "example sub-menu 1"
+ parent = "Parent"
+ pageRef = "posts"
+ weight = 20
+
+[[main]]
+ name = "example sub-menu 2"
+ parent = "Parent"
+ pageRef = "posts"
+ weight = 20
 
 #[[subnavigation]]
 #  name = "An interesting topic"
@@ -58,10 +70,10 @@
 # the copyright notice. Configure as per the main menu above.
 
 
-# [[footer]]
-#   name = "Tags"
-#   pageRef = "tags"
-#   weight = 10
+[[footer]]
+  name = "Tags"
+  pageRef = "tags"
+  weight = 10
 
 # [[footer]]
 #   name = "Categories"
