--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -2,7 +2,7 @@ disabled = true
 languageCode = "en"
 languageName = "English"
 weight = 1
-title = "Nonreachable"
+title = "Gulugulugrave"
 
 [params]
   displayName = "EN"
