--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -21,18 +21,17 @@ disableImageOptimization = false
 disableTextInHeader = false
 # backgroundImageWidth = 1200
 
-# defaultBackgroundImage = "IMAGE.jpg" # used as default for background images 
+defaultBackgroundImage = "/img/image.png" # used as default for background images 
 # defaultFeaturedImage = "IMAGE.jpg" # used as default for featured images in all articles
 
-# highlightCurrentMenuArea = true
-# smartTOC = true
+smartTOC = true
 # smartTOCHideUnfocusedChildren = true
 
 giteaDefaultServer = "https://git.fsfe.org"
 forgejoDefaultServer = "https://v8.next.forgejo.org"
 
 [header]
-  layout = "basic" # valid options: basic, fixed, fixed-fill, fixed-gradient, fixed-fill-blur
+  layout = "fixed-fill-blur" # valid options: basic, fixed, fixed-fill, fixed-gradient, fixed-fill-blur
 
 [footer]
   showMenu = true
@@ -43,7 +42,7 @@ forgejoDefaultServer = "https://v8.next.forgejo.org"
 
 [homepage]
   layout = "custom" # valid options: page, profile, hero, card, background, custom
-  #homepageImage = "IMAGE.jpg" # used in: hero, and card
+  homepageImage = "IMAGE.png" # used in: hero, and card
   showRecent = true
   showRecentItems = 5
   showMoreLink = true
@@ -55,7 +54,7 @@ forgejoDefaultServer = "https://v8.next.forgejo.org"
 [article]
   showDate = true
   showViews = false
-  showLikes = false
+  # showLikes = true
   showDateOnlyInArticle = false
   showDateUpdated = false
   showAuthor = false
