--- a/config/_default/menus.zh-cn.toml
+++ b/config/_default/menus.zh-cn.toml
@@ -17,10 +17,10 @@
 #   url = "https://github.com/irishcx/personal_blog"
 #   weight = 50
 
-[[main]]
-  name = "关于我"
-  pageRef = "about"
-  weight = 10
+# [[main]]
+#   name = "关于我"
+#   pageRef = "about"
+#   weight = 10
 
 [[main]]
   name = "时间线"
@@ -37,10 +37,10 @@
   pageRef = "tags"
   weight = 20
 
-[[main]]
-  name = "Archive"
-  pageRef = ""
-  weight = 40
+# [[main]]
+#   name = "Archive"
+#   pageRef = ""
+#   weight = 40
 
 
 # [[main]]
