--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -88,7 +88,8 @@ forgejoDefaultServer = "https://v8.next.forgejo.org"
   layoutBackgroundBlur = true # only used when heroStyle equals background or thumbAndBackground
   layoutBackgroundHeaderSpace = true # only used when heroStyle equals background
   showBreadcrumbs = false
-  showSummary = true
+  showSummary = false
+  # summaryLength = 100
   showViews = false
   showLikes = false
   showTableOfContents = false
