--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -5,12 +5,14 @@
 theme = "blowfish" # UNCOMMENT THIS LINE
 baseURL = "https://blog.gulugulrave.com/"
 defaultContentLanguage = "zh-cn"
-markup.defaultMarkdownHandler = "goldmark"
+[markup]
+  defaultMarkdownHandler = "goldmark"
 
 pluralizeListTitles = true # hugo function useful for non-english languages, find out more in  https://gohugo.io/getting-started/configuration/#pluralizelisttitles
 
 enableRobotsTXT = true
-summaryLength = 0
+[summary]
+  length = 70
 
 buildDrafts = false
 buildFuture = false
