--- a/config/_default/menus.zh-cn.toml
+++ b/config/_default/menus.zh-cn.toml
@@ -33,15 +33,15 @@
   pageRef = "categories"
   weight = 20
 
-[[main]]
-  name = "标签"
-  pageRef = "tags"
-  weight = 20
+# [[main]]
+#   name = "标签"
+#   pageRef = "tags"
+#   weight = 20
 
 [[main]]
   name = "友链"
   pageRef = "links"
-  weight = 20
+  weight = 30
 
 # [[main]]
 #   name = "Archive"
@@ -88,12 +88,12 @@
 # the copyright notice. Configure as per the main menu above.
 
 
-[[footer]]
-  name = "Tags"
-  pageRef = "tags"
-  weight = 10
+# [[footer]]
+#   name = "Tags"
+#   pageRef = "tags"
+#   weight = 10
 
-[[footer]]
-  name = "Categories"
-  pageRef = "categories"
-  weight = 20
+# [[footer]]
+#   name = "Categories"
+#   pageRef = "categories"
+#   weight = 20
