--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,3 @@
-baseURL = 'https://gulugulurave.com/'
+baseURL = 'https://blog.gulugulurave.com/'
 languageCode = 'zh-CN'
-title = 'Blog 1011'
+title = '咕噜咕庐'
